# t2i-agent-lab4

./: .gitignore  README.md  RUNBOOK.md  environment.yml  pyproject.toml  requirements.txt
docs/: 提交说明.md
outputs/: 20260605-003537-offline-demo-cn_scene-seed66.json  20260605-003538-offline-demo-en_scene-seed66.json  20260605-003538-offline-demo-multi_attr-seed66.json  20260605-003538-offline-demo-style_anime-seed66.json  20260605-003538-offline-demo-text_render-seed66.json  20260605-005052-kolors-default-cn_scene-seed66.json  20260605-115614-lens-turbo-en_scene-seed42.json  20260605-120105-lens-turbo-cn_scene-seed66.json  20260605-120304-lens-turbo-en_scene-seed66.json  20260605-120457-lens-turbo-multi_attr-seed66.json  20260605-120641-lens-turbo-text_render-seed66.json  20260605-120835-lens-turbo-style_anime-seed66.json
prompts/: test_prompts.jsonl
reports/: 实验四_基于预训练模型的文生图实践报告.md
scripts/: run_all.py  run_demo.ps1  run_real.ps1
src/t2i_agent/: __init__.py  backends.py  cli.py  generator.py  metadata.py  prompts.py
tests/: test_agent_core.py  test_agent_core_unittest.py
