[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "t2i-agent-lab4"
version = "0.1.0"
description = "Experiment 4 text-to-image agent for Kolors and Microsoft Lens."
requires-python = ">=3.9"
dependencies = [
  "accelerate",
  "diffusers>=0.30.0",
  "huggingface-hub",
  "pillow",
  "safetensors",
  "torch",
  "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]
